# header-gen

./: DeclComposer.py  Makefile.inc  README  envsetup.sh
clang-plugins/: .eproject-c  CMakeLists.txt  README
clang-plugins/decl-filter/: CMakeLists.txt  DeclComposer.py  DeclFilter.cpp
clang-plugins/printer/: CMakeLists.txt  DumpDecls.cpp
linux/: Makefile
patch/clang/: 0001-Mark-symbols-as-referenced-when-they-are-looked-up.patch
unittests/: Makefile  basic.c  basic.oo  basic.sqlite  comment.c  comment.sqlite  enum.c  enum.sqlite  function.c  function.oo  function.sqlite  macro.c  macro.sqlite  struct.c  struct.oo  struct.sqlite  typedef.c  typedef.dummy.c  typedef.sqlite
unittests/basic.d/: basic.h
unittests/comment.d/: basic.h
unittests/enum.d/: basic.h
unittests/enum.log/: enum.c.1
unittests/function.d/: basic.h
unittests/include/: basic.h  cpu.h  macro.h
unittests/macro.d/: basic.h  cpu.h  macro.h
unittests/struct.d/: basic.h
unittests/typedef.d/: basic.h
